Changing layer broken for objects shared by multiple scenes #32191

Closed
opened 2012-07-27 00:51:04 +02:00 by Chris Want · 11 comments

%%%Hi,

I have an object that is shared by multiple scenes. If I change the layer
of the object in one scene, often the object will jump back to the old
layer due to the instance of the object in the other scene.

Probably changing the layer on any given scene should update
the layer of the other instances of the object in other scenes
too. Either that, or the layer of the object should be moved
from the Object data structure to whatever data structure is
used to link objects to scenes.

Chris
%%%

%%%Hi, I have an object that is shared by multiple scenes. If I change the layer of the object in one scene, often the object will jump back to the old layer due to the instance of the object in the other scene. Probably changing the layer on any given scene should update the layer of the other instances of the object in other scenes too. Either that, or the layer of the object should be moved from the Object data structure to whatever data structure is used to link objects to scenes. Chris %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%This isnt a bug, layers are a scene property - not owned by the object.%%%

%%%This isnt a bug, layers are a scene property - not owned by the object.%%%
Author

%%%HI Campbell,

It is a bug -- if you change the layer of an object in a scene,
and later while you're working, the layer jumps back to the
old layer in that scene, then that is a bug. No user would
possibly want or expect that behavior. If layers are a scene
property, then this should not happen, so somewhere in
the system the layer of an object in one scene is getting
updated with the layer of the object in another scene.
Smells like a bug to me.

Chris
%%%

%%%HI Campbell, It is a bug -- if you change the layer of an object in a scene, and later while you're working, the layer jumps back to the old layer in that scene, then that is a bug. No user would possibly want or expect that behavior. If layers are a scene property, then this should not happen, so somewhere in the system the layer of an object in one scene is getting updated with the layer of the object in another scene. Smells like a bug to me. Chris %%%

%%%Ah, if they jump between layers from within the same scene this is indeed bad (should only be when switching scenes).

This threw me
"""Probably changing the layer on any given scene should update
the layer of the other instances of the object in other scenes
too."""

Not sure what you mean here, the Base->lay (objects instance in a scene), can be different in each scene by design.

Can you give steps to redo bad jumping between layer behavior?%%%

%%%Ah, if they jump between layers from within the same scene this is indeed bad (should only be when switching scenes). This threw me """Probably changing the layer on any given scene should update the layer of the other instances of the object in other scenes too.""" Not sure what you mean here, the Base->lay (objects instance in a scene), can be different in each scene by design. Can you give steps to redo bad jumping between layer behavior?%%%
Author

%%%Thanks Campbell, this behaviour has happened a few times, but I'm finding it hard to replicate the steps to reproduce it. When I do, I'll upload a blend.

Chris%%%

%%%Thanks Campbell, this behaviour has happened a few times, but I'm finding it hard to replicate the steps to reproduce it. When I do, I'll upload a blend. Chris%%%
Author

%%%Hi Campbell,

I think I've created a blend (layer_bug.blend, attached to this follow up) and a recipe for reproducing this bug:

  1. Load layer_bug.blend
  2. Change scene to "Scene" and observe that all objects are on layer 1.
  3. Change scene to "SceneLinkedCopy" and observe that all objects are on layer 2.
  4. Change scene back to "Composite" and hit F12 to render -- you'll see a cube.
  5. Next change the screen from "Default" to "Compositing" and press F12 to render -- you'll see no cube
  6. Now change the screen back to "Default" and the scene to "Scene" -- huh? All of the objects have jumped from layer 1 to layer 2.

I hope these instructions are understandable, and that you are able to reproduce the behaviour that I get here!

Cheers,
Chris
%%%

%%%Hi Campbell, I think I've created a blend (layer_bug.blend, attached to this follow up) and a recipe for reproducing this bug: 0) Load layer_bug.blend 1) Change scene to "Scene" and observe that all objects are on layer 1. 2) Change scene to "SceneLinkedCopy" and observe that all objects are on layer 2. 3) Change scene back to "Composite" and hit F12 to render -- you'll see a cube. 4) Next change the *screen* from "Default" to "Compositing" and press F12 to render -- you'll see no cube 5) Now change the *screen* back to "Default" and the scene to "Scene" -- huh? All of the objects have jumped from layer 1 to layer 2. I hope these instructions are understandable, and that you are able to reproduce the behaviour that I get here! Cheers, Chris %%%
Member

%%%Putting on my list%%%

%%%Putting on my list%%%
Member

%%%Confirmed - fishy stuff here. Will dig into tomorrow.%%%

%%%Confirmed - fishy stuff here. Will dig into tomorrow.%%%
Member

%%%And the fix goes to svn. Error of 2.5 years old, in beginning of 2.5 period.%%%

%%%And the fix goes to svn. Error of 2.5 years old, in beginning of 2.5 period.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thank you Ton!

Chris%%%

%%%Thank you Ton! Chris%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32191
No description provided.