source/blender/blenkernel/intern/scene.c
@@ -1019,8 +1019,10 @@ static void scene_update_tagged_recursive(Main *bmain, Scene *scene, Scene *scen
 		if (ob->dup_group && (ob->transflag & OB_DUPLIGROUP))
 			group_handle_recalc_and_update(scene_parent, ob, ob->dup_group);
 			
-		/* always update layer, so that animating layers works */
-		base->lay = ob->lay;
+		/* always update layer, so that animating layers works (joshua july 2010) */
+		/* XXX commented out, this has depsgraph issues anyway - and this breaks setting scenes
+		   (on scene-set, the base-lay is copied to ob-lay (ton nov 2012) */
+		// base->lay = ob->lay;
 	}
 	
 	/* scene drivers... */
